--- a/index.html
+++ b/index.html
@@ -28,19 +28,35 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
     and lover of pugs. She loves branding, packaging and illustration.</p>
 </div>
 
+<div id="grid">
 
   <div id="gallery">
       <ul id="navigation">
     <a id="work"></a>
+    <div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="harrypotter.html"><img class="img-flex" src="img/hpotter.png" alt="Harry Potter poster"></a>
+    </div>
+    <div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="bekkers.html"><img class="img-flex" src="img/logo.png" alt="Logo of cat and dog"></a>
+    </div>
+    <div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="fromm.html"><img class="img-flex" src="img/frommbag.png" alt="Bag of dog food"></a>
+</div>
+<div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="vegan.html"><img class="img-flex" src="img/vegan.png" alt="Newsletter on veganism"></a>
+</div>
+<div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="barkpark.html"><img class="img-flex" src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+</div>
+<div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="infographic.html"><img class="img-flex" src="img/info.png" alt="infographic"></a>
+</div>
+<div id="unit s-1 m-1-2 l-1-3 xl-1-4">
       <a href="doll.html"><img class="img-flex" src="img/doll.png" alt="Doll packaging logo"></a>
+</div>
     </ul>
   </div>
+</div>
 
 
 <footer>
