--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
       <ul id="navigation">
     <a id="work"></a>
     <div id="unit s-1 m-1-2 l-1-3 xl-1-4">
-      <a href="harrypotter.html"><img class="img-flex" src="img/hpotter.png" alt="Harry Potter poster"></a>
-      <a href="bekkers.html"><img class="img-flex" src="img/logo.png" alt="Logo of cat and dog"></a>
-      <a href="fromm.html"><img class="img-flex" src="img/frommbag.png" alt="Bag of dog food"></a>
-      <a href="vegan.html"><img class="img-flex" src="img/vegan.png" alt="Newsletter on veganism"></a>
-      <a href="barkpark.html"><img class="img-flex" src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
-      <a href="infographic.html"><img class="img-flex" src="img/info.png" alt="infographic"></a>
-      <a href="doll.html"><img class="img-flex" src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="harrypotter.html"><img src="img/hpotter.png" alt="Harry Potter poster"></a>
+      <a href="bekkers.html"><img src="img/logo.png" alt="Logo of cat and dog"></a>
+      <a href="fromm.html"><img src="img/frommbag.png" alt="Bag of dog food"></a>
+      <a href="vegan.html"><img src="img/vegan.png" alt="Newsletter on veganism"></a>
+      <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
+      <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
+      <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
     </div>
     </ul>
   </div>
-  
+
 </div>
 
 
