--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
 </main>
 
 <div class="about">
-  <a id="about"></a>
+  <a id="bio"></a>
   <p>Shannon Hawn is a graphic designer based in Ottawa with her husband and
     their tiny zoo of animals. She is an advertising grad, Pinterest addict
     and lover of pugs. She loves branding, packaging and illustration.</p>
@@ -41,6 +41,7 @@ title: Shannon Hawn Portfolio • Graphic Designer • Ottawa, Ontario
       <a href="barkpark.html"><img src="img/barkparkphone.png" alt="App mockup on iPhone"></a>
       <a href="infographic.html"><img src="img/info.png" alt="infographic"></a>
       <a href="doll.html"><img src="img/doll.png" alt="Doll packaging logo"></a>
+      <a href="evergreen.html"><img class="img-flex" src="img/eglogo.png" alt="App logo" width="300" height="400"></a>
     </div>
     </ul>
   </div>
