added vegan 2 image, deleted unused html files

--- a/vegan.html
+++ b/vegan.html
@@ -22,6 +22,7 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
    <ul id="navigation">
      <li><img alt="" src="{{site.baseurl}}/img/vegan.png" width="300" height="400"></a></li>
      <li><img alt="" src="{{site.baseurl}}/img/vegan1.jpg" width="500" height="400"></a></li>
+     <li><img alt="" src="{{site.baseurl}}/img/vegan2.jpg" width="500" height="400"></a></li>
    </ul>
 </div>
 <main>
