added alt tags and amended size of header

--- a/barkpark.html
+++ b/barkpark.html
@@ -22,10 +22,10 @@ title: App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/img/barkparkphone.png" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/barkpark4.jpg" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/barkpark2.jpg" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/barkpark3.jpg" width="300" height="400"></a></li>
+     <li><img src="{{site.baseurl}}/img/barkparkphone.png" width="300" height="400" alt="hand holding phone at dog park"></a></li>
+     <li><img src="{{site.baseurl}}/img/barkpark4.jpg" width="300" height="400" alt="hand holding phone at dog park with map mockup"></a></li>
+     <li><img src="{{site.baseurl}}/img/barkpark2.jpg" width="300" height="400" alt="storyboard sketch"></a></li>
+     <li><img src="{{site.baseurl}}/img/barkpark3.jpg" width="300" height="400" alt="app flow chart sketch"></a></li>
    </ul>
 </div>
 </main>
