--- a/bekkers.html
+++ b/bekkers.html
@@ -23,9 +23,9 @@ title: Logo Design and Branding · Graphic Designer, Creative Professional · Ot
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img src="{{site.baseurl}}/img/bekkers2.jpg" width="500" height="400" alt=""></li>
-     <li><img src="{{site.baseurl}}/img/logo.png" width="300" height="400" alt=""></li>
-     <li><img src="{{site.baseurl}}/img/bekkers.jpg" width="700" height="400" alt=""></li>
+     <li><img src="{{site.baseurl}}/img/bekkers2.jpg" width="500" height="400" alt="computer screen"></li>
+     <li><img src="{{site.baseurl}}/img/logo.png" width="300" height="400" alt="logo"></li>
+     <li><img src="{{site.baseurl}}/img/bekkers.jpg" width="700" height="400" alt="branding board"></li>
    </ul>
 </div>
 </main>
