--- a/infographic.html
+++ b/infographic.html
@@ -22,7 +22,7 @@ title: Infographic Design · Graphic Designer, Creative Professional · Ottawa, 
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/img/info.png" width="300" height="400"></a></li>
+     <li><img alt="poster of infographic" src="{{site.baseurl}}/img/info.png" width="300" height="400"></a></li>
    </ul>
 </div>
 </main>
