--- a/vegan.html
+++ b/vegan.html
@@ -20,9 +20,9 @@ title: Newsletter Layout · Graphic Designer, Creative Professional · Ottawa, C
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/img/vegan.png" width="300" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/vegan1.jpg" width="500" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/vegan2.jpg" width="500" height="400"></a></li>
+     <li><img src="{{site.baseurl}}/img/vegan.png" width="300" height="400" alt="a vegan newsletter mockup"></a></li>
+     <li><img src="{{site.baseurl}}/img/vegan1.jpg" width="500" height="400" alt="two pages of vegan newsletter"></a></li>
+     <li><img src="{{site.baseurl}}/img/vegan2.jpg" width="500" height="400" alt="two pages of vegan newsletter"></a></li>
    </ul>
 </div>
 <main>
