--- a/doll.html
+++ b/doll.html
@@ -22,13 +22,13 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
 
  <div id="gallery">
    <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/img/doll.png" width="300" height="400"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/img/doll6.png" width="500" height="400"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/img/doll5.png" width="400" height="400"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/doll1.png" width="200" height="200"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/doll3.png" width="200" height="200"></a></li>
-     <li><img alt="" src="{{site.baseurl}}/img/doll7.png" width="300" height="200"></a></li>
-    <li><img alt="" src="{{site.baseurl}}/img/doll4.png" width="300" height="200"></a></li>
+     <li><img alt="logo of doll" src="{{site.baseurl}}/img/doll.png" width="300" height="400"></a></li>
+    <li><img alt="packaging template" src="{{site.baseurl}}/img/doll6.png" width="500" height="400"></a></li>
+    <li><img alt="drawing of doll" src="{{site.baseurl}}/img/doll5.png" width="400" height="400"></a></li>
+     <li><img alt="branding board" src="{{site.baseurl}}/img/doll1.png" width="200" height="200"></a></li>
+     <li><img alt="mockup of box - top view" src="{{site.baseurl}}/img/doll3.png" width="200" height="200"></a></li>
+     <li><img alt="mockup of box - front view" src="{{site.baseurl}}/img/doll7.png" width="300" height="200"></a></li>
+    <li><img alt="mockup of shopping bag" src="{{site.baseurl}}/img/doll4.png" width="300" height="200"></a></li>
    </ul>
 </div>
 </main>
