amended indent and deleted extra description css

--- a/doll.html
+++ b/doll.html
@@ -3,12 +3,12 @@ layout: default
 title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
-    <div class="nav">
-      <a id="nav"></a>
+  <div class="nav">
+    <a id="nav"></a>
       <ul>
         <li><a href="index.html">HOME</a></li>
       </ul>
-    </div>
+  </div>
 </header>
 
 <main>
@@ -19,29 +19,28 @@ title: Packaging Design · Graphic Designer, Creative Professional · Ottawa, Ca
       I created the template to print the packaging.</p>
   </div>
 
-
   <div id="gallery">
     <ul id="navigation">
       <li><img alt="logo of doll" src="{{site.baseurl}}/img/doll.png" width="300" height="400"></a></li>
       <li><img alt="packaging template" src="{{site.baseurl}}/img/doll6.png" width="500" height="400"></a></li>
       <li><img alt="drawing of doll" src="{{site.baseurl}}/img/doll5.png" width="400" height="400"></a></li>
       <li><img alt="branding board" src="{{site.baseurl}}/img/doll1.png" width="200" height="200"></a></li>
-      <li><img alt="mockup of box - top view" src="{{site.baseurl}}/img/doll3.png" width="200" height="200"></a></li>
-      <li><img alt="mockup of box - front view" src="{{site.baseurl}}/img/doll7.png" width="300" height="200"></a></li>
+      <li><img alt="mockup of box top view" src="{{site.baseurl}}/img/doll3.png" width="200" height="200"></a></li>
+      <li><img alt="mockup of box front view" src="{{site.baseurl}}/img/doll7.png" width="300" height="200"></a></li>
       <li><img alt="mockup of shopping bag" src="{{site.baseurl}}/img/doll4.png" width="300" height="200"></a></li>
     </ul>
   </div>
 </main>
 
-<div class="contact">
-  <a id="contact"></a>
-  <footer>
+<footer>
+  <div class="contact">
+    <a id="contact"></a>
     <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
     <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
     <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
     <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
-  <div class="top">
-  <a href="#nav">TOP</a>
+    <div class="top">
+      <a href="#nav">TOP</a>
+    </div>
   </div>
-  </footer>
-</div>
+</footer>
