--- a/evergreen.html
+++ b/evergreen.html
@@ -3,38 +3,36 @@ layout: default
 title: Smart Product App Design · Graphic Designer, Creative Professional · Ottawa, Canada
 ---
 <header>
-    <div class="nav">
-        <a id="nav"></a>
+  <div class="nav">
+    <a id="nav"></a>
       <ul>
         <li><a href="index.html">HOME</a></li>
       </ul>
-    </div>
+  </div>
 </header>
 
 <main>
   <div class="work">
     <h2>Evergreen App</h4>
-    <p class="description">Evergreen is a smart plant pot that keeps the user informed on the health of their plants as well as waters the plants as needed. When the pot is out of water, needs sunlight, etc. it notifies the user through app notifications. The user will receive monthly Birthday Badges to congratulate them on keeping the plant alive.
-</p>
+    <p class="description">Evergreen is a smart plant pot that keeps the user informed on the health of their plants as well as waters the plants as needed. When the pot is out of water, needs sunlight, etc. it notifies the user through app notifications. The user will receive monthly Birthday Badges to congratulate them on keeping the plant alive.</p>
   </div>
 
-
- <div id="gallery">
-   <ul id="navigation">
-     <li><img alt="" src="{{site.baseurl}}/img/evergreen.jpg" width="400" height="3200"></a></li>
-   </ul>
-</div>
+  <div id="gallery">
+    <ul id="navigation">
+      <li><img alt="" src="{{site.baseurl}}/img/evergreen.jpg" width="400" height="3200"></a></li>
+    </ul>
+  </div>
 </main>
 
-<div class="contact">
-  <a id="contact"></a>
 <footer>
-  <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
-  <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
-  <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
-  <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
-<div class="top">
-  <a href="#nav">TOP</a>
-</div>
+  <div class="contact">
+    <a id="contact"></a>
+    <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a></li>
+    <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a></li>
+    <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a></li>
+    <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a></li>
+      <div class="top">
+        <a href="#nav">TOP</a>
+      </div>
+  </div>
 </footer>
-</div>
