--- a/404.html
+++ b/404.html
@@ -14,21 +14,10 @@ permalink: 404.html
 </header>
 
 <main>
-  <div class="image">
-    <img class="404" src="img/404.png" alt="broken robot">
+  <div class="link">
+    <img src="{{site.baseurl}}/img/404.png" width="800" height="500" alt="broken robot">
       <a id="404"></a>
   </div>
 </main>
 
-<footer>
-  <div class="contact">
-    <a id="contact"></a>
-    <a href="mailto:shannonhawn@hotmail.com"><img class="social" src="img/email.svg"></a>
-    <a href="https://ca.linkedin.com/in/shannonhawn"><img class="social" src="img/linkedin.svg"></a>
-    <a href="https://www.instagram.com/shannonsauve_design/"><img class="social" src="img/insta.svg"></a>
-    <a href="https://www.behance.net/hawnsauve/"><img class="social" src="img/be.svg"></a>
-      <div class="top">
-        <a href="#nav" id="top">TOP</a>
-      </div>
-  </div>
 </footer>
