added link, changed folder for image

--- a/404.html
+++ b/404.html
@@ -3,19 +3,14 @@ layout: default
 permalink: 404.html
 ---
 <header>
-  <div class="nav">
-    <a id="nav"></a>
-      <ul>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+  <div class="lab">
+        <a href="#index">Back to the lab!</a>
   </div>
 </header>
 
 <main>
   <div class="link">
-    <img src="{{site.baseurl}}/img/404.png" width="800" height="500" alt="broken robot">
+    <img class="robot" src="{{site.baseurl}}/img/404.png" width="800" height="500" alt="broken robot">
       <a id="404"></a>
   </div>
 </main>
